force-app/main/default/objects/zoom_app__Zoom__c/zoom_app__Zoom__c.object-meta.xml
<CustomObject>
    <description>This object saves the API configuration details of Salesforce and Zoom integration. 
It will have only one record per ORG. API details will be used of Zoom Admin account. 
Zoom users of admin account will be different users in Salesforce.</description>
    <label>Zoom</label>
    <nameField>
        <label>Zoom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>