force-app/main/default/objects/zoom_app__Zoom__c/fields/zoom_app__Zoom_API_Key__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Zoom_API_Key__c</fullName>
    <inlineHelpText>Zoom API Key</inlineHelpText>
    <label>Zoom API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>