force-app/main/default/objects/zoom_app__Zoom__c/fields/zoom_app__Zoom_API_Secret__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Zoom_API_Secret__c</fullName>
    <inlineHelpText>Zoom Secret Key</inlineHelpText>
    <label>Zoom API Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>